Dont crash if the compostior doesnt support the shortcut inhibit protocol

BUG:497457
FIXED-IN:6.10